# ClaudeDeck

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  popup.html  postcss.config.js  vite.config.ts
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  NEXT_STEPS.md  RELEASING.md  ccusage-source-code.md  debugging-history.md  project_request.md  tailwind-v4-setup.md  technical_spec.md
homebrew/: claudedeck.rb  post_release_steps.md  test_formula.sh  update_hashes.sh
raycast-extension/: .gitignore  PUBLISHING.md  README.md  package.json  tsconfig.json
raycast-extension/src/: daily-cost.tsx  open-app.tsx  usage-stats.tsx
src/: App.css  App.tsx  app.postcss.css  index.css  main.tsx  popup.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  core.rs  file_monitor.rs  lib.rs  main.rs  settings.rs  tray.rs
src/components/: DebugConsole.tsx  ErrorBoundary.tsx
src/components/layout/: Container.tsx  (+1 more)
src/hooks/: index.ts  useFileMonitoring.ts  useSystemTray.ts
src/lib/: data-processor.ts  formatters.ts  types.ts
src/store/: index.ts  settingsStore.ts  usageDataStore.ts
src/views/: BlocksReport.tsx  DailyReport.tsx  Dashboard.tsx  MonthlyReport.tsx  Popup.tsx  SessionReport.tsx  Settings.tsx
tasks/: documentation-plan.md  raycast-todo.md  todo.md
(+10 files in other folders)
